core/testing/snapshots/misc/scoping.snap
### TITLE ###
Scoping changing var in if block is remembered
### INPUT ###
a = 1
if true:
	a = 2
print(a)
### STDOUT ###
2

### TITLE ###
Scoping defining var in if block is remembered
### INPUT ###
if true:
	a = 1
print(a)
### STDOUT ###
1

### TITLE ###
Scoping changing var in for block is remembered
### INPUT ###
a = 1
for i in range(3):
	a = i
print(a)
### STDOUT ###
2

### TITLE ###
Scoping defining var in for block is remembered
### INPUT ###
for i in range(3):
	// do nothing
print(i)
### STDOUT ###
2

### TITLE ###
Scoping defining item var in for block is remembered
### INPUT ###
for item in ["a", "b", "c"] with loop:
	// do nothing
print("idx", loop.idx)
print("item", item)
### STDOUT ###
idx 2
item c

### TITLE ###
Scoping defining key value vars in for block is remembered
### INPUT ###
for k, v in {"a": 1, "b": 2, "c": 3}:
	// do nothing
print("k", k)
print("v", v)
### STDOUT ###
k c
v 3

### TITLE ###
Scoping last value of rad lambda is not remembered
### INPUT ###
nums = [10]
i = 0
display:
	fields nums
	nums:
		map fn(i) i * 2
print("i", i)
### STDOUT ###
nums 
20    
i 0

### TITLE ###
Scoping last value of rad lambda is not defined
### INPUT ###
nums = [10]
display:
	fields nums
	nums:
		map fn(i) i * 2
print("i", i)
### STDOUT ###
nums 
20    

### STDERR ###
error[RAD20028]: Undefined variable: i
  --> <script>:6:12
  |
5 | 		map fn(i) i * 2
6 | print("i", i)
  |            ^
  |
   = help: variables with similar names exist: int, min, zip
   = info: rad explain RAD20028


### EXIT ###
1
